--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for Perl extension Time::Duration::Parse
 
-0.11 2014-03-
+0.11 2014-03-26
     - Min perl version now set to 5.6.0
+    - Added description of DateTime::Format::Duration to SEE ALSO
 
 0.10 2014-03-24
     - Switched to Dist::Zilla. The Module::Install Makefile.PL was resulting
