--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Time::Duration::Parse
 
+0.13 2015-10-25 NEILB
+    - Added additional abbrevations for 'months': 'mo', 'mon', 'mons'.
+      Thanks to PERLANCAR.
+    - Rewrote the main testsuite to be data driven, to make it easy to
+      add test cases, as for the above change.
+    - Updated github repo URL after changing my github username
+
 0.12 2015-07-02 NEILB
     - Added [MetaJSON] to dist.ini, so the dist will get a META.json file.
       RT#105627 from ETHER.
