--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl extension Time::Duration::Parse
 
 0.15 2019-05-12 NEILB
     - Added support for fractional parts of seconds in hh:mm:ss.ssss
+    - Added L<> links to Time::Duration and duration_exact in that module.
 
 0.14 2018-06-29 NEILB
     - Added "hrs" as another form for "hours". Thanks to Stig for the PR.
